--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <table width="100%" border="0">
+    <table width="100%" border="1">
         <tr><!--Encabezado-->
             <td colspan="2">
             
-            <center><img src="imagenes/INTRO.png" width="200px" height="200px"></center>
+            <center><img src="imagenes/INTO.png" width="500px" height="300px"></center>
           
             </td> 
         </tr>
@@ -20,8 +20,8 @@
             <td rowspan="3" width="20%"><!--Menu-->
                 <ul>
                     <li><a>Inicio</a></li>
-                    <li><a href="Frontend.html">Frontend</a></li>
-                    <li><a href="Acerca.html">Acerca de..</a></li>
+                    <li><a>Frontend</a></li>
+                    <li><a>Acerca de..</a></li>
                 </ul>
 
             </td>
@@ -36,7 +36,7 @@
         <tr>
             <td><!--seccion-->
                 <DIv>
-                    <h2>¿que es CSS?</h2>
+                    <h2>¿Que es CSS?</h2>
                     <img src="imagenes/CSS_Logo.png" width="80px" height="80px">
                     <p>Es un lenguaje de diseño grfico para definir y crear presentaciones y documentos estructurado escrito en un lenguaje marcado</p>
                     <li>HTML1</li>
@@ -50,7 +50,7 @@
         <tr>
             <td><!--seccion-->
                 <DIv>
-                    <h2>¿que es JAVASCRIPT?</h2>
+                    <h2>¿Que es JAVASCRIPT?</h2>
                     <img src="imagenes/JS_Logo.png" width="80px" height="80px">
                     <p>Es un lenguaje de programacion que se puede utilizar para construir sitios Web y para hacerlos mas interactivos </p>
                 </DIv>
