--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <td rowspan="3" width="20%"><!--Menu-->
                 <ul>
                     <li><a>Inicio</a></li>
-                    <li><a>Frontend</a></li>
-                    <li><a>Acerca de..</a></li>
+                    <li><a href="Frontend.html">Frontend</a></li>
+                    <li><a href="Acerca.html">Acerca de..</a></li>
                 </ul>
 
             </td>
